<resources>
    <string name="app_name">ATestCity Map</string>
    <string name="nospaceleft">Not enough space left on device.</string>
    <string name="spaceneeded1">This program needs at least</string>
    <string name="spaceneeded2">of free space to operate. Consider moving the program to SD card if possible.</string>
    <string name="loading_data">Extracting data. Please wait…</string>
    <string name="error">Error</string>
    <string name="close">Close</string>
    <string name="file_size_bytes">bytes</string>
    <string name="file_size_kb">kB</string>
    <string name="file_size_mb">MB</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="consent_title">Privacy Policy</string>
    <string name="consent_accept">Accept</string>
    <string name="consent_decline">Decline</string>
    <string name="labels">Labels</string>
    <string name="open_drawer">Show sidebar</string>
    <string name="close_drawer">Hide sidebar</string>
    <string name="menu_info_about">About this software</string>
    <string name="menu_privacy">Privacy policy</string>
    <string name="menu_position">Position</string>
    <string name="menu_search">Search</string>
    <string name="menu_search_remove">Remove Marker</string>
    <string name="menu_preferences">Preferences</string>
    <string name="menu_more_maps">More maps</string>
    <string name="menu_map">Map</string>
    <string name="menu_position_last_known">Last known location</string>
    <string name="menu_position_my_location_enable">Show my location</string>
    <string name="menu_position_my_location_disable">Remove my location</string>
    <string name="menu_weather">Weather</string>
    <string name="menu_public_transport_map">Public transport map</string>
    <string name="menu_faq">FAQ</string>
    <string name="menu_help_info">Help &amp; Info</string>
    <string name="menu_help">Help</string>
    <string name="menu_select_all">Select all</string>
    <string name="menu_select_none">Select none</string>
    <string name="title_location_permission">Permission Required</string>
    <string name="rationale_location_permission">To display your location, this app needs permission to access your device\'s location. Please grant the permission in the next dialog.</string>
    <string name="rationale_location_permission_denied">To display your location, this app needs permission to access your device\'s location. Because you have denied this permission permanently before, you can only enable it in the system settings of this app. Do you want to open the settings dialog now?</string>
    <string name="error_last_location_unknown">The last location is unknown</string>
    <string name="no_location_provider_available">No location source available. Would you like to open the system settings for location sources?</string>
    <string name="preferences_general">General settings</string>
    <string name="preferences_map">Map settings</string>
    <string name="preferences_system">System settings</string>
    <string name="preferences_privacy">Privacy settings</string>
    <string name="preferences_advanced">Advanced settings</string>
    <string name="preferences_show_scale_bar">Map scale bar</string>
    <string name="preferences_show_scale_bar_desc">Show the scale of the map</string>
    <string name="preferences_fullscreen">Full screen mode</string>
    <string name="preferences_fullscreen_desc">Hide the status bar</string>
    <string name="preferences_wake_lock">Stay awake</string>
    <string name="preferences_wake_lock_desc">Stop the screen from locking</string>
    <string name="preferences_move_speed">Move speed</string>
    <string name="preferences_move_speed_desc">Adjust the move speed of the map</string>
    <string name="preferences_move_speed_value">%d %% move speed</string>
    <string name="preferences_magnification">Font size</string>
    <string name="preferences_magnification_desc">Adjust the size of fonts on the map</string>
    <string name="preferences_magnification_value">%d %% magnification</string>
    <string name="snap_to_location_enabled">Snap to position is activated</string>
    <string name="snap_to_location_disabled">Snap to position is disabled</string>
    <string name="preferences_renderstyle_dialog_title">Select a map theme</string>
    <string name="preferences_renderstyle_title">Map theme</string>
    <string name="preferences_renderstyle_summary">Appearance of the map</string>
    <string name="preferences_show_tips">Show tips</string>
    <string name="preferences_show_tips_desc">Display tips and tricks when starting the app</string>
    <string name="preferences_app_info">App info</string>
    <string name="preferences_app_info_desc">Show system info about the app and manage permissions</string>
    <string name="preferences_locations_sources">Location settings</string>
    <string name="preferences_locations_sources_desc">Show system settings for location sources</string>
    <string name="preferences_personalized_ads">Personalized ads</string>
    <string name="preferences_personalized_ads_desc">Show personalized ad banners. If you deactivate this option, only non-personalized ads will be displayed</string>
    <string name="preferences_show_grid">Show grid</string>
    <string name="preferences_show_grid_desc">Display the boundaries of the map tiles used to create the map</string>
    <string name="preferences_show_zoom_level">Show zoom level</string>
    <string name="preferences_show_zoom_level_desc">Display the current zoom level in the upper left corner</string>
    <string name="preferences_show_coordinates">Show coordinates</string>
    <string name="preferences_show_coordinates_desc">Display the current coordinates of the map center in the upper left corner</string>
    <string name="search_hint">Search database</string>
    <string name="search_match_mode">match mode</string>
    <string name="search_order">order</string>
    <string name="search_filter">filter</string>
    <string name="search_help">help</string>
    <string name="alphabetic">alphabetic</string>
    <string name="alphabetic_inverse">inverse</string>
    <string name="by_distance">by distance</string>
    <string name="anywhere">anywhere</string>
    <string name="exact">exact</string>
    <string name="start_with">starts with</string>
    <string name="end_with">ends with</string>
    <string name="categories_select_all">all categories</string>
    <string name="categories_select_streets">streets</string>
    <string name="categories_select_food">food &amp; drink</string>
    <string name="categories_pick">pick categories</string>
    <string name="search_no_results">No results. Try a less specific query…</string>
    <string name="help_search_text1">You can use the buttons just below the textfield to refine the search results.</string>
    <string name="help_search_text2">Use the first button to select the match mode, i.e. where you would like the search query to appear in the name: for example, if you select \"starts with\", each item\'s name in the results will begin with your input. Similarly, there is an option \"ends with\", but there are also two more modes: \"anywhere\" and \"exact\". \"Anywhere\" means that the query can appear anywhere in the name, while \"exact\" means that each name has to match your query exactly. By default, the mode \"anywhere\" is selected.</string>
    <string name="help_search_text3">With the second button you can adjust the order of results. You can choose \"alphabetic\", reverse alphabetic (\"inverse\") and \"by distance\". The \"by distance\" mode will sort results by distance from the center of the map (i.e. the portion of the map that is currently visible in the map view). It will also display the distance from the center of the map for each item.</string>
    <string name="help_search_text4">With the third button you can select the categories of items to include in the search. For example you could configure to look only for streets or just for restaurants. However, you can select any combination of categories: another example would be to restrict the results to museums and theatres or hotels.</string>
    <string name="dialog_startup_title">Tips and tricks</string>
    <string name="mm_head">More apps by Topobyte.de</string>
    <string name="mm_head_netzplan">Public transport</string>
    <string name="mm_intro_public_transport_map">For this city there is also a public transport map available that let\'s you browse the transportation network:</string>
    <string name="mm_button_public_transport_map">Public transport map</string>
    <string name="mm_head_maps">Other cities</string>
    <string name="mm_intro_maps">We offer maps for several other cities and regions. You can either browse the maps on our website or download our manager app that let\'s you browse all maps conveniently:</string>
    <string name="mm_button_web">Browse maps on the web</string>
    <string name="mm_button_manager_app">Get manager app</string>
    <string name="mm_head_atlas">World map / Atlas</string>
    <string name="mm_intro_atlas">We created a world map app that let\'s you browse a political map of the world and explore countries and cities. It also includes some useful information about countries and a little quiz about country flags and more:</string>
    <string name="mm_button_atlas">World map &amp; Atlas</string>
    <string name="mm_head_misc">Miscellaneous</string>
    <string name="mm_intro_dice">Do you sometimes want to play a board or dice game and don\'t have any dice? Maybe you would like to use our decent dice simulator:</string>
    <string name="mm_button_dice">Dice simulator</string>
    <string name="map_data">Map data</string>
    <string name="map_copyright">© OpenStreetMap contributors</string>
    <string name="map_license">License: Open Data Commons Open Database License (ODbL)</string>
    <string name="privacy1">The legal basis for this privacy policy is the General Data Protection Regulation (GDPR). The controller for the processing of any kind of personal data through this app is Sebastian Kürten (sebastian@topobyte.de).</string>
    <string name="privacy2">As the publisher of this app, we take the protection of your privacy very seriously. Hence we do not process or store any personal data about you. It is also impossible to us, because no data is transmitted from this app to either us, our servers or third parties.</string>
    <string name="privacy4">If you activate the location display, the app reads your device\'s location so that it is able to display it on the map. Depending on your system settings, it will detect your location via GPS, Wifi or GSM with varying accuracy. If you use this functionality, you consent to the processing of this information for the purpose of displaying it on the map. Your location is not transmitted to us or third parties and hence is not processed or stored by us. Your location data is not permanently stored and you can stop processing it at any time by disabling the location display.</string>
    <string name="privacy5">This app is financed by showing ad banners from Google. By default these banners display personalized ads. Google processes information stored on your device to accomplish this. You can read about what Google is doing in their <a href="https://policies.google.com/technologies/partner-sites">Privacy Policy</a>. To protect your privacy, you can configure to show only non-personalized ads in the settings. You can use the app completely without ads by using the premium version, or by purchasing the <a href="https://play.google.com/store/apps/details?id=de.topobyte.apps.freemium.unlock.citymaps">unlocker app</a> to disable the ad banners.</string>
    <string name="privacy6">You have the unlocker app installed. Hence the following paragraph about ad banners does not apply because no ads will be used.</string>
</resources>