<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:showIn="@layout/activity_about">

    <TextView
        style="@style/Head"
        android:text="@string/map_data"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <View style="@style/MediumSpacer" />

    <TextView
        android:id="@+id/textViewMapCopyright"
        style="@style/Text"
        android:text="@string/map_copyright"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textViewMapLicense"
        style="@style/Text"
        android:text="@string/map_license"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</merge>